--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [:customer, @product] do |f| %>
-    <%= f.input :category_id, collection: category_for_collection, prompt: 'Select category' %>
+    <%= f.input :category_id, collection: product_category_collection, prompt: 'Select category' %>
     <%= f.input :gender, collection: ['Male', 'Female'], prompt: 'Select gender'%>
     <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory' %>
     <%= f.input :name %>
