--- a/app/views/customer/services/index.html.erb
+++ b/app/views/customer/services/index.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-12">
     <ul class="list-inline">
       <li>
-        <%= link_to 'Add Product', new_customer_product_path, class: 'btn btn-primary' %>
+        <%= link_to 'Add Service', new_customer_service_path, class: 'btn btn-primary' %>
       </li>
     </ul>
   </div>
@@ -20,13 +20,13 @@
       </tr>
       </thead>
       <tbody>
-      <% @products.each do |product| %>
+      <% @services.each do |service| %>
           <tr>
-            <td><%= product.name %></td>
-            <td><%= product.start_at.strftime(time_format) %></td>
-            <td><%= product.start_at.strftime(time_format) %></td>
+            <td><%= service.name %></td>
+            <td><%= service.start_at.strftime(time_format) %></td>
+            <td><%= service.start_at.strftime(time_format) %></td>
             <td>
-              <%= link_to edit_customer_product_path(product) do %>
+              <%= link_to edit_customer_service_path(service) do %>
                   <i class="fa fa-edit"></i>
               <% end %>
             </td>
