--- a/app/views/customer/services/index.html.erb
+++ b/app/views/customer/services/index.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-12">
     <ul class="list-inline">
       <li>
-        <%= link_to 'Add Service', new_customer_service_path, class: 'btn btn-primary' %>
+        <%= link_to 'Post Service', new_customer_service_path, class: 'btn btn-primary' %>
       </li>
     </ul>
   </div>
