--- a/app/views/customer/shared/_sidebar.html.erb
+++ b/app/views/customer/shared/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <ul class="list-unstyled text-center">
   <li><%= link_to 'Dashboard', customer_dashboard_path %></li>
-  <li><%= link_to 'Advertisements', customer_advertisements_path %></li>
+  <!--<li><%#= link_to 'Advertisements', customer_advertisements_path %></li>-->
   <li><%= link_to 'Products', customer_products_path %></li>
   <li><%= link_to 'Services', customer_services_path %></li>
 </ul>
