--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -108,7 +108,7 @@
         <ul class="nav navbar-nav">
           <li class="dropdown"><a href="#"><i class="fa fa-reorder"></i>&nbsp; Shop by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
             <ul class="dropdown-menu dropdown-menu-category">
-              <li><a href="#"><i class="fa fa-home dropdown-menu-category-icon"></i>Home Appliances</a>
+              <li><a href="#">Home Appliances</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
@@ -145,12 +145,10 @@
                         </div>
                       </div>
                     </div>
-                    <!--<img class="dropdown-menu-category-section-theme-img" src="img/test_cat/2-i.png" alt="Image Alternative text" title="Image Title" style="right: -10px;" />-->
-                    <%#= image_tag 'theme_img/test_cat/2-i.png', class: "dropdown-menu-category-section-theme-img", alt: "" %>
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-diamond dropdown-menu-category-icon"></i>Home Furnishing</a>
+              <li><a href="#">Home Furnishing</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
@@ -190,7 +188,7 @@
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-child dropdown-menu-category-icon"></i>Electronics</a>
+              <li><a href="#">Electronics</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
@@ -223,7 +221,7 @@
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-plug dropdown-menu-category-icon"></i>Entertainment</a>
+              <li><a href="#">Entertainment</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
@@ -253,7 +251,7 @@
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-tags dropdown-menu-category-icon"></i>Health & Wellness</a>
+              <li><a href="#">Health & Wellness</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
@@ -280,12 +278,10 @@
                         </div>
                       </div>
                     </div>
-                    <!--<img class="dropdown-menu-category-section-theme-img" src="img/test_cat/6-i.png" alt="Image Alternative text" title="Image Title" style="right: -20px;" />-->
-                    <%#= image_tag 'theme_img/test_cat/6-i.png', class: "dropdown-menu-category-section-theme-img", alt: "" %>
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-music dropdown-menu-category-icon"></i>Wedding Collection</a>
+              <li><a href="#">Wedding Collection</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
@@ -327,7 +323,7 @@
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-location-arrow dropdown-menu-category-icon"></i>Vehicles</a>
+              <li><a href="#">Vehicles</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
@@ -348,7 +344,7 @@
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-motorcycle dropdown-menu-category-icon"></i>Travel & Adventure</a>
+              <li><a href="#">Travel & Adventure</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
@@ -382,7 +378,7 @@
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-picture-o dropdown-menu-category-icon"></i>Kids</a>
+              <li><a href="#">Kids</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
@@ -406,7 +402,7 @@
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-paw dropdown-menu-category-icon"></i>Commercial Space</a>
+              <li><a href="#">Commercial Space</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
@@ -430,7 +426,7 @@
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-cubes dropdown-menu-category-icon"></i>Membership</a>
+              <li><a href="#">Membership</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
@@ -452,7 +448,7 @@
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-motorcycle dropdown-menu-category-icon"></i>Interests & Hobbies</a>
+              <li><a href="#">Interests & Hobbies</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
@@ -482,7 +478,7 @@
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-motorcycle dropdown-menu-category-icon"></i>Books & Magazines</a>
+              <li><a href="#">Books & Magazines</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
@@ -512,7 +508,7 @@
                   </div>
                 </div>
               </li>
-              <li><a href="#"><i class="fa fa-motorcycle dropdown-menu-category-icon"></i>Others</a>
+              <li><a href="#">Others</a>
                 <div class="dropdown-menu-category-section">
                   <div class="dropdown-menu-category-section-inner">
                     <div class="dropdown-menu-category-section-content">
