--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -306,7 +306,7 @@
                 <%= @service.average_rating.present? ? @service.average_rating.round(1) : '0.0' %>
               </li>
             </ul><small><%= @service.customer_review.present? ?  @service.customer_review : '0' %> customer reviews</small>
-            <p><strong><%#= (@service.recommand_count * 100) / @service.customer_review %>%</strong> of reviewers would recommend this product</p>
+            <p><strong><%= @service.recommand_count > 0 ? ((@service.recommand_count * 100) / @service.customer_review > 0 ? @service.customer_review : 1) : '0' %>%</strong> of reviewers would recommend this product</p>
           </div>
         </div>
       </div>
