--- a/app/views/subcategories/show.html.erb
+++ b/app/views/subcategories/show.html.erb
@@ -110,7 +110,7 @@
                       </h5>
                       <div class="product-caption-price">
                         <span class="product-caption-price-new">
-                          ₹<%= product.per_hour_price %>
+                          ₹<%= product.per_hour_price > 0 ? "#{product.per_hour_price}" : (product.per_day_price > 0 ? "#{product.per_day_price}" : (product.per_week_price > 0 ? "#{product.per_week_price}" : (product.per_month_price > 0 ? "#{product.per_month_price}" : 0.0))) %>
                         </span>
                       </div>
                     </div>
@@ -152,7 +152,7 @@
                       </h5>
                       <div class="product-caption-price">
                         <span class="product-caption-price-new">
-                          ₹<%= service.per_hour_price %>
+                          ₹<%= service.per_hour_price ? "#{service.per_hour_price}" : (service.per_day_price > 0 ? "#{service.per_day_price}" : (service.per_week_price > 0 ? "#{service.per_week_price}" : (service.per_month_price > 0 ? "#{service.per_month_price}" : 0.0))) %>
                         </span>
                       </div>
                     </div>
