--- a/app/views/customer/enquiry_recieves/index.html.erb
+++ b/app/views/customer/enquiry_recieves/index.html.erb
@@ -12,7 +12,7 @@
             <div id="product" class="tab-pane fade in active">
               <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#product_enquiry">Enquiry(<%= @enquiries[:product_enquiries].where(status: 'Enquiry').count%>)</a></li>
-                <li><a data-toggle="tab" href="#product_quoted">Quoted(<%= @enquiries[:product_enquiries].where(status: 'Quoted').count%>)</a></li>
+                <!--<li><a data-toggle="tab" href="#product_quoted">Quoted(<%#= @enquiries[:product_enquiries].where(status: 'Quoted').count%>)</a></li>-->
                 <li><a data-toggle="tab" href="#product_confirmed">Confirmed(<%= @enquiries[:product_enquiries].where(status: 'Confirmed').count%>)</a></li>
               </ul>
               <div class="tab-content">
@@ -145,36 +145,36 @@
                       <h2 class="text-center">No Enquiry Available</h2>
                   <%end%>
                 </div>
-                <div id="service_quoted" class="tab-pane fade">
-                  <%if @enquiries[:service_enquiries].where(status: 'Quoted').any? %>
-                      <% @enquiries[:service_enquiries].where(status: 'Quoted').each do |service_enquiry| %>
-                          <%= link_to customer_enquiry_path(service_enquiry) do %>
-                              <div class="white-bg">
-                                <div class="col-md-2 col-sm-3 col-xs-12 text-center">
-                                  <div class="add-image-con">
-                                    <% if (service_enquiry.service && service_enquiry.service.service_images.any?) %>
-                                        <%= image_tag service_enquiry.service.service_images.first.image.url(ServiceImage::DEFAULT_SIZE), class: 'img-responsive' %>
-                                    <% else %>
-                                        <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
-                                    <% end %>
-                                  </div>
-                                </div>
-                                <div class="col-md-10 col-sm-9 col-xs-12">
-                                  <h2 class="description"><%#= service_enquiry.service.name.capitalize %></h2>
-                                  <h2 class="heading" style="padding-top: 0;">Service</h2>
-                                  <!--<span style="color: #000"><%#= customer_enquiry.status %></span>-->
-                                  <h5 class="time-option"><%= service_enquiry.start_at.strftime(time_format) %> - <%= service_enquiry.end_at.strftime(time_format) %></h5>
-                                  <p class="description"><%= service_enquiry.description %></p>
-                                </div>
-                                <div class="clearfix"></div>
-                              </div>
-                          <% end %>
-                      <% end %>
-                  <%else%>
-                      <div class="gap"></div>
-                      <h2 class="text-center">No Enquiry Available</h2>
-                  <%end%>
-                </div>
+                <!--<div id="service_quoted" class="tab-pane fade">-->
+                  <!--<%#if @enquiries[:service_enquiries].where(status: 'Quoted').any? %>-->
+                      <!--<%# @enquiries[:service_enquiries].where(status: 'Quoted').each do |service_enquiry| %>-->
+                          <!--<%#= link_to customer_enquiry_path(service_enquiry) do %>-->
+                              <!--<div class="white-bg">-->
+                                <!--<div class="col-md-2 col-sm-3 col-xs-12 text-center">-->
+                                  <!--<div class="add-image-con">-->
+                                    <!--<%# if (service_enquiry.service && service_enquiry.service.service_images.any?) %>-->
+                                        <!--<%#= image_tag service_enquiry.service.service_images.first.image.url(ServiceImage::DEFAULT_SIZE), class: 'img-responsive' %>-->
+                                    <!--<%# else %>-->
+                                        <!--<%#= image_tag "theme_img/500x500.png", class: 'img-responsive' %>-->
+                                    <!--<%# end %>-->
+                                  <!--</div>-->
+                                <!--</div>-->
+                                <!--<div class="col-md-10 col-sm-9 col-xs-12">-->
+                                  <!--<h2 class="description"><%#= service_enquiry.service.name.capitalize %></h2>-->
+                                  <!--<h2 class="heading" style="padding-top: 0;">Service</h2>-->
+                                  <!--&lt;!&ndash;<span style="color: #000"><%#= customer_enquiry.status %></span>&ndash;&gt;-->
+                                  <!--<h5 class="time-option"><%#= service_enquiry.start_at.strftime(time_format) %> - <%#= service_enquiry.end_at.strftime(time_format) %></h5>-->
+                                  <!--<p class="description"><%#= service_enquiry.description %></p>-->
+                                <!--</div>-->
+                                <!--<div class="clearfix"></div>-->
+                              <!--</div>-->
+                          <!--<%# end %>-->
+                      <!--<%# end %>-->
+                  <!--<%#else%>-->
+                      <!--<div class="gap"></div>-->
+                      <!--<h2 class="text-center">No Enquiry Available</h2>-->
+                  <!--<%#end%>-->
+                <!--</div>-->
                 <div id="service_confirmed" class="tab-pane fade">
                   <%if @enquiries[:service_enquiries].where(status: 'Confirmed').any? %>
                       <% @enquiries[:service_enquiries].where(status: 'Confirmed').each do |service_enquiry| %>
