--- a/app/views/customer/enquiry_recieves/index.html.erb
+++ b/app/views/customer/enquiry_recieves/index.html.erb
@@ -190,7 +190,7 @@
                                   </div>
                                 </div>
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                  <h2 class="description"><%#= service_enquiry.service.name.capitalize %></h2>
+                                  <h2 class="description"><%= service_enquiry.service.name.capitalize %></h2>
                                   <h2 class="heading" style="padding-top: 0;">Service</h2>
                                   <!--<span style="color: #000"><%#= customer_enquiry.status %></span>-->
                                   <h5 class="time-option"><%= service_enquiry.start_at.strftime(time_format) %> - <%= service_enquiry.end_at.strftime(time_format) %></h5>
