--- a/app/views/admin/enquiries/index.html.erb
+++ b/app/views/admin/enquiries/index.html.erb
@@ -16,11 +16,11 @@
             <td><%= enquiry.is_product ? 'Product' : 'Service' %></td>
             <td><%#= enquiry.user.email %></td>
             <td><%#= enquiry.user.contact %></td>
-            <td><%#= enquiry.created_at.strftime(time_format) %></td>
+            <td><%= enquiry.created_at.strftime(time_format) %></td>
             <td>
-              <%#= link_to admin_enquiry_path(enquiry) do %>
-                  <!--<i class="fa fa-eye"></i>-->
-              <%#- end %>
+              <%= link_to admin_enquiry_path(enquiry) do %>
+                  <i class="fa fa-eye"></i>
+              <%- end %>
             </td>
           </tr>
       <%- end %>
