--- a/app/views/admin/enquiries/index.html.erb
+++ b/app/views/admin/enquiries/index.html.erb
@@ -13,7 +13,7 @@
       <tbody>
       <% @enquiries.each do |enquiry| %>
           <tr>
-            <%= enquiry.user %>
+            <%= enquiry.user.email %>
             <td><%= enquiry.is_product ? 'Product' : 'Service' %></td>
             <td><%#= enquiry.user.email %></td>
             <td><%#= enquiry.user.contact %></td>
