--- a/app/views/admin/enquiries/index.html.erb
+++ b/app/views/admin/enquiries/index.html.erb
@@ -13,9 +13,9 @@
       <tbody>
       <% @enquiries.each do |enquiry| %>
           <tr>
-            <%= enquiry.user.name %>
+            <%= enquiry.user.name.present? ? enquiry.user.name : '' %>
             <td><%= enquiry.is_product ? 'Product' : 'Service' %></td>
-            <td><%#= enquiry.user.email %></td>
+            <td><%= enquiry.user.email.present? ? enquiry.user.email : '' %></td>
             <td><%#= enquiry.user.contact %></td>
             <td><%= enquiry.created_at.strftime(time_format) %></td>
             <td>
