--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -79,6 +79,7 @@
                 <% if current_user.id == @product.user.id %>
                     <a class="btn btn-block btn-success" style="margin-top: 10px" href="javascript:void(0);" %>Your Product</a>
                 <% else %>
+                    <p class="text-right" style="font-size: 12px; font-weight: bold; color: #888888"><%= @product.negotiable.present? ? 'Price negotiable : YES' : 'Price negotiable : NO' %></p>
                     <a class="btn btn-block btn-primary" style="margin: 10px 0" href="<%= new_product_enquiry_path(@product) %>">Enquire</a>
                     <div class="add-wishlist-con">
                       <%= link_to 'Add to wishlist', wish_list_user_path(current_user, is_product: true, wish_id: @product.id), method: :put , class: 'btn btn-block btn-primary', style: 'z-index: 1;' unless current_user.wish_list.detect{|i| i == "1-#{@product.id}"}.present?%>
@@ -192,7 +193,6 @@
               <tr>
                 <td>Other: <%= @product.other.present? ? @product.other : 'NA' %></td>
               </tr>
-
               </tbody>
             </table>
           </div>
